--- a/index.html
+++ b/index.html
@@ -9,11 +9,65 @@
     </head>
 
     <body>
-
-
-
-
-
+        <div class="main">
+            <div class="first">
+                <div class="container">
+                    <div class="left">
+                        <img class="logo" src="p1.png" id="logo">
+                        <div>
+                            <p class="reg1">REGIONS</p>
+                            <P class="reg2">Mortgage</P>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <h3 class="tex">Are you a new customer?</h3>
+                        <div class="enroll-row">
+                            <button class="enroll-btn">Enroll Now</button>
+                            <div class="enrollment-container">
+                                <h2 class="en">Enroll now to:</h2>
+                                <ul>
+                                    <li>Access your loans online</li>
+                                    <li>Pay your mortgage online</li>
+                                    <li>View your mortgage statements</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="form">
+                    <h1 class="wn">Welcome Back</h1>
+                    <h2 class="sn">Sign In to Your Regions MyMortgage account</h2>
+                    <form id="loginForm">
+                        <div class="contain">
+                            <input class="un" type="text" placeholder="Online ID" name="uname" required>
+                            <input class="pw" type="password" placeholder="Password" name="psw" required>
+                            <label>
+                                <input class="in" type="checkbox" name="remember">
+                                <span class="checkbox-custom"></span> Remember me
+                            </label>
+                            <button class="ln" type="submit">Login</button>
+                        </div>
+                        <div class="last">
+                            <span class="psw">Forgot Online ID?</span>
+                            <span class="psw">Forgot Password?</span>
+                        </div>
+                    </form>
+                </div>
+                <footer class="footer">
+                    <div class="f1">
+                        <h2 class="text">Equal housing Lender</h2>
+                        <h2 class="text">Member FDIC</h2>
+                    </div>
+                    <div class="f2">
+                        <h1 class="text">© 2024 Regions Corporation. All Rights Reserved</h1>
+                        <h1 class="text1">1(800)|REGIONS</h1>
+                    </div>
+                </footer>
+            </div>
+            <div class="second">
+                <img class="img2" src="p2.jpg" alt="home" id="img2">
+            </div>
+        </div>
         <script src="script.js"></script>
     </body>
 
