--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="first">
                 <div class="container">
                     <div class="left">
-                        <img class="logo" src="p1.png" id="logo">
+                        <img class="logo" src="p1.png">
                         <div>
                             <p class="reg1">REGIONS</p>
                             <P class="reg2">Mortgage</P>
@@ -65,6 +65,7 @@
                 </footer>
             </div>
             <div class="second">
+                <img src="p1.png" id="logo">
                 <img class="img2" src="p2.jpg" alt="home" id="img2">
             </div>
         </div>
