--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
                 <img src="p1.png" id="logo">
                 <img class="img2" src="p2.jpg" alt="home" id="img2">
             </div>
+            <div>
+                <img src="p2.jpg" class="img4">
+            </div>
         </div>
+
         <script src="script.js"></script>
     </body>
 
